Revert "Fix z-index => ds-inputs-form (#679)" (#680)
This reverts commit 092c154631140499a4daa08fc27f40da806b31ad.

--- a/src/styles/elements/ds-inputs-form.scss
+++ b/src/styles/elements/ds-inputs-form.scss
@@ -136,7 +136,7 @@ input {
             font-family: Open Sans;
             font-weight: 600;
             font-size: 14px;
-            z-index: 9;
+            z-index: 20;
             color: $color-text-base;
             white-space: nowrap;
             background: white;
@@ -234,7 +234,7 @@ input {
         position: absolute;
         top: -1px;
         left: 5px;
-        z-index: 8;
+        z-index: 10;
     }
 
     .auth-form__login-label {
@@ -243,7 +243,7 @@ input {
         left: 12px;
         font-weight: 600;
         font-size: 14px;
-        z-index: 10;
+        z-index: 20;
         color: $color-text-base;
     }
 
@@ -260,7 +260,7 @@ input {
         top: -12px;
         font-weight: 600;
         font-size: 14px;
-        z-index: 10;
+        z-index: 20;
         color: rgba(96, 98, 102, 0.5);
     }
 
@@ -484,7 +484,7 @@ input {
         position: absolute;
         top: 0;
         left: 5px;
-        z-index: 8;
+        z-index: 10;
     }
 
     .ds-inputs-form__input {
